auth-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api-deployment
spec:
  selector:
    matchLabels:
      app: auth-api-pod
  template:
    metadata:
      labels:
        app: auth-api-pod
    spec:
      containers:
      - name: auth-api-container
        image: andrejkaravida/auth-api:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api-service
spec:
  selector:
    app: auth-api-pod
  ports:
  - port: 5002
    targetPort: 80
  type: ClusterIP
