avio-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avio-api-deployment
spec:
  selector:
    matchLabels:
      app: avio-api-pod
  template:
    metadata:
      labels:
        app: avio-api-pod
    spec:
      containers:
      - name: avio-api-container
        image: andrejkaravida/avio-api:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: avio-api-service
spec:
  selector:
    app: avio-api-pod
  ports:
  - port: 5000
    targetPort: 80
  type: ClusterIP
